Fix spacing issue on recipe-descriptor. Flip flex-direction and justify correctly

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,7 +11,11 @@
     text-align: justify;
     text-justify: inter-word;
     font-size: large;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 
 
 
